/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.map.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message MapListener {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    string key = 2;
}

message MapEntry {
    string key = 1;
    MapValue value = 2;
}

message MapValue {
    bytes value = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    google.protobuf.Timestamp expire = 3 [
        (gogoproto.stdtime) = true
    ];
}

message MapInput {
    oneof input {
        SizeInput size = 1;
        PutInput put = 2;
        InsertInput insert = 3;
        UpdateInput update = 4;
        GetInput get = 5;
        RemoveInput remove = 6;
        ClearInput clear = 7;
        LockInput lock = 8;
        UnlockInput unlock = 9;
        EntriesInput entries = 10;
        EventsInput events = 11;
    }
}

message MapOutput {
    oneof output {
        SizeOutput size = 1;
        PutOutput put = 2;
        InsertOutput insert = 3;
        UpdateOutput update = 4;
        GetOutput get = 5;
        RemoveOutput remove = 6;
        ClearOutput clear = 7;
        LockOutput lock = 8;
        UnlockOutput unlock = 9;
        EntriesOutput entries = 10;
        EventsOutput events = 11;
    }
}

message SizeInput {

}

message SizeOutput {
    uint32 size = 1;
}

message PutInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_index = 4 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message PutOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    IndexedValue prev_value = 2;
}

message InsertInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message InsertOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message UpdateInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_index = 4 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message UpdateOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    IndexedValue prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message GetInput {
    string key = 1;
}

message GetOutput {
    IndexedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message RemoveInput {
    string key = 1;
    uint64 prev_index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message RemoveOutput {
    IndexedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message ClearInput {

}

message ClearOutput {

}

message LockInput {
    repeated string keys = 1;
    google.protobuf.Duration timeout = 2 [
        (gogoproto.stdduration) = true
    ];
}

message LockOutput {

}

message UnlockInput {
    repeated string keys = 1;
}

message UnlockOutput {

}

message EntriesInput {
    bool watch = 1;
}

message EntriesOutput {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsInput {
    string key = 1;
}

message EventsOutput {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    string key = 1;

    oneof event {
        Inserted inserted = 2;
        Updated updated = 3;
        Removed removed = 4;
    }

    message Inserted {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        IndexedValue prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Removed {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}

message Entry {
    string key = 1;
    IndexedValue value = 2;
}

message IndexedValue {
    bytes value = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}
